--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -3,6 +3,10 @@
 html
 	background-color: $background
 	color: white
+	font-family: Arial, Helvetica, sans-serif
 
-p
+h1, h2, h3, h4, h5, p
 	margin: 0px
+
+img
+	border-radius: $border-radius
