--- a/src/styles/tags.sass
+++ b/src/styles/tags.sass
@@ -3,19 +3,49 @@ $maroon: #800000
 .unfilled_tag 
   border-radius: 25px
   border: 1px solid $maroon
-  padding: 1%
-  width: 30px
+  padding: 20 px
+  padding-bottom: 15px
   height: 5px 
-  padding-bottom: 2%
+  padding-left: 8px
+  padding-right: 8px
 
 
 .filled_tag 
   border-radius: 25px
   border: 1px solid $maroon
   background: $maroon
-  padding: 1%
-  padding-bottom: 2%
-  width: 3x
-  height: 20px 
+  padding: 20 px
+  padding-bottom: 15px
+  height: 5px 
   color: white
+  padding-left: 8px
+  padding-right: 8px
+
+
+.tags
+  display: flex
+  margin: 0px
+  flex-wrap: wrap
+  gap: 12px
+  background: white
+  padding: 0
+  margin: 10px
+
+.stars
+  display: flex
+  margin: 0px
+  flex-wrap: wrap
+  gap: 12px
+  background: white
+  padding: 0
+
+.tags
+  li
+    list-style: none
+  .right 
+    color: blue
+
+.star
+  width: 2%
+  height: 2%
 
