The tags they re coming

--- a/src/styles/tags.sass
+++ b/src/styles/tags.sass
@@ -1,25 +1,18 @@
-$maroon: #800000
+$ourgrey: #715F58
 
 .unfilled_tag 
   border-radius: 25px
-  border: 1px solid $maroon
-  padding: 20 px
-  padding-bottom: 15px
+  border: 1px solid white
   height: 5px 
-  padding-left: 8px
-  padding-right: 8px
+  padding: 3px 15px 15px 15px
 
 
 .filled_tag 
   border-radius: 25px
-  border: 1px solid $maroon
-  background: $maroon
-  padding: 20 px
-  padding-bottom: 15px
+  border: 0.2px solid white
+  background: $ourgrey
+  padding: 3px 15px 15px 15px
   height: 5px 
-  color: white
-  padding-left: 8px
-  padding-right: 8px
 
 
 .tags
@@ -27,9 +20,10 @@ $maroon: #800000
   margin: 0px
   flex-wrap: wrap
   gap: 12px
-  background: white
-  padding: 0
-  margin: 10px
+  background: clear
+  padding: 5px 0px 5px 0px
+  margin: 0px
+
 
 .stars
   display: flex
