--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -1,3 +1,7 @@
-$background: #1a1a1a
+$background: #222222
+$container-background: #2a2a2a
 $padding: 12px
 $border-radius: 12px
+$border-color: #6f6f6f
+$shadow: 0px 0px 5px white
+$text-color: #ffffff
