--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -31,7 +31,7 @@
 	flex-grow: 1
 	border-radius: $border-radius
 	color: white
-	padding: $padding / 2
+	padding: calc($padding / 2)
 
 .filter
 	height: 24px
