--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -4,6 +4,12 @@ html
 	background-color: $background
 	color: white
 	font-family: Arial, Helvetica, sans-serif
+	overflow: hidden
+	width: 100%
+	height: 100%
+
+body
+	margin: 0
 
 h1, h2, h3, h4, h5, p
 	margin: 0px
