--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,5 +1,22 @@
 @import ./vars
 
+.header
+	background-color: $background
+	display: flex
+	justify-content: space-between
+	padding: $padding
+
+.profile-icon
+	height: 30px
+	filter: $white-filter
+	align-self: center
+
+.main-content
+	height: 100vh
+	width: 100vw
+	display: flex
+	flex-direction: column
+
 .tile-list
 	display: flex
 	flex-direction: column
@@ -19,6 +36,9 @@
 .tile-content
 	flex-direction: column
 
+.location-modal
+	position: absolute
+
 .list-header
 	display: flex
 	justify-content: space-between
@@ -37,4 +57,4 @@
 	height: 24px
 	width: auto
 	align-self: center
-	filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%)
+	filter: $white-filter
