--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -5,3 +5,4 @@ $border-radius: 12px
 $border-color: #6f6f6f
 $shadow: 0px 0px 5px white
 $text-color: #ffffff
+$white-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%)
