--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -11,6 +11,11 @@
 	filter: $white-filter
 	align-self: center
 
+#map
+	height: calc(100% - $grip-height)
+	width: 100%
+	background-color: white
+
 .main-content
 	height: 100vh
 	width: 100vw
@@ -60,10 +65,14 @@
 	bottom: 0
 	left: 0
 	right: 0
-	height: 100vh
+	max-height: 100vh
 	background-color: $background
 	border-radius: $border-radius
 	padding: $padding
+
+.location-modal-content
+	height: 100%
+	overflow: scroll
 
 .list-header
 	display: flex
