--- a/src/styles/create.sass
+++ b/src/styles/create.sass
@@ -13,9 +13,13 @@ input
 	color: white
 	padding: calc($padding / 2)
 
-// button
-// 	background-color: $background
-// 	border: 1px solid $border-color
-// 	border-radius: calc($border-radius / 2)
-// 	color: white
-// 	padding: calc($padding / 2)
+.submit
+	background-color: $background
+	border: 1px solid $border-color
+	border-radius: calc($border-radius / 2)
+	color: white
+	padding: calc($padding / 2)
+	cursor: pointer
+
+	&:hover
+		background-color: $border-color
