pictures on the top of location view

--- a/src/styles/locationPage.sass
+++ b/src/styles/locationPage.sass
@@ -47,6 +47,11 @@ header, nav, main, aside, footer
     img
         height: 100%
 
+#firstImages
+    margin: 0px $padding 0px $padding
+    justify-content: space-evenly
+    img
+        border-radius: $border-radius
 
 #listHeader
     display: flex
@@ -94,6 +99,9 @@ header, nav, main, aside, footer
         margin: $padding 0px 0px 0px
     div
         background: none
+
+.leftHandSide
+    flex: 1
 
 .rightHandSide
     display: flex
