Create location works

--- a/src/styles/location.sass
+++ b/src/styles/location.sass
@@ -22,7 +22,7 @@
 
 .tile-container
     border-radius: $border-radius
-    border: 1px solid white
+    border: 1px solid $border-color
     padding: $padding
     flex-wrap: wrap
     text-align: center
