--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -2,7 +2,7 @@ $background: #222222
 $container-background: #2a2a2a
 $padding: 12px
 $border-radius: 12px
-$border-color: #6f6f6f
+$border-color: #5e5e5e
 $shadow: 0px 0px 5px white
 $text-color: #ffffff
 $white-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%)
