fixed global sass

--- a/src/styles/locationPage.sass
+++ b/src/styles/locationPage.sass
@@ -2,18 +2,10 @@
 $margins: 10px
 
 
-*
+
+#background
     box-sizing: border-box
     background: $background
-
-ul
-    li
-        list-style: none
-
-
-header, nav, main, aside, footer
-    padding: $padding
-    color: $text-color
 
 #locationPageFormat
     padding: $padding
