filters in search

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -69,12 +69,14 @@
 	background-color: $background
 	border-radius: $border-radius
 	padding: $padding
+	margin-bottom: calc($padding * 2)
 
 .location-modal-content
 	height: 100%
-	overflow: scroll
+	overflow-y: scroll
 	margin-right: -$padding
 	padding-right: $padding
+	padding-bottom: $padding
 
 .list-header
 	display: flex
