--- a/src/styles/locationPage.sass
+++ b/src/styles/locationPage.sass
@@ -73,7 +73,7 @@ $margins: 10px
     flex-wrap: wrap
     gap: $padding
     margin: 0 px 10 px 10 px 10px
-    padding: 0px $padding 0px $padding
+    padding: 0px $padding $padding $padding
     background: $container-background
     border-radius: $border-radius
 
