--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -6,4 +6,5 @@ $border-color: #5e5e5e
 $shadow: 0px 0px 5px white
 $text-color: #ffffff
 $white-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%)
+$gray-filter: brightness(0) saturate(100%) invert(37%) sepia(0%) saturate(31%) hue-rotate(156deg) brightness(93%) contrast(83%)
 $grip-height: 50px
